refactor: 整体代码的调整以及重构